[package]
name = "wasm-oci-download"
version = "0.0.1"
edition = "2018"
description = "wasm-oci-download"
readme = "README.md"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
hyperx = "0.13"
lazy_static = "1.4"
regex = "1.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9.2"
tokio = { version  = "1.0", features = ["macros", "fs"] }
www-authenticate = "0.3"
tracing = { version = "0.1", features = ['log'] }
oci-distribution = { git = "https://github.com/krustlet/krustlet" }

[dev-dependencies]
rstest = "0.6"
env_logger = "0.8"
