[package]
name = "wasm-oci-download"
version = "0.0.1"
edition = "2018"
description = "wasm-oci-download"
readme = "README.md"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
anyhow = "1.0"
cached = "0.25.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
serde = {version = "1.0", features = ["derive"]}
serde_yaml = {version = "0.8.21"}
serde_json = {version = "1.0"}
tokio = { version  = "1.0", features = ["macros", "fs"] }
oci-distribution = { git = "https://github.com/krustlet/krustlet" }

[dev-dependencies]
rstest = "0.6"
env_logger = "0.8"
